bugfix(event-card spacing)  fix for text overflow
AB#112

--- a/Singer.API/ClientApp/src/app/modules/dashboard/components/event-card/event-card.component.css
+++ b/Singer.API/ClientApp/src/app/modules/dashboard/components/event-card/event-card.component.css
@@ -6,6 +6,7 @@
    display: flex;
    justify-content: space-between;
 }
+
 .date-indicator {
    display: flex;
    align-items: center;
@@ -15,4 +16,13 @@
 
 .agegroup-chips {
    min-height: 40px;
+}
+
+.event-description {
+   max-height: 1.5em;
+   max-width: 300px;
+   overflow: hidden;
+   text-overflow: ellipsis;
+
+
 }
